tests/negative/import_no_exit_a.toit
// Copyright (C) 2019 Toitware ApS. All rights reserved.

ambiguous := 499
